--- a/style.css
+++ b/style.css
@@ -6,107 +6,153 @@
 }
 
 body {
-    /* margin: 40px; */
     background: hsl(30, 38%, 92%);
+    padding: 30px 0;
+    margin: 1rem;
 }
 
 .grid-container {
-    margin-top: 40px;
-    margin-left: 200px;
-    margin-bottom: 40px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    max-width: 600px;
 }
 
 .grid img {
     width: 100%;
     height: 100%;
+    border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
 }
 
 .grid-two {
     background: hsl(0, 0%, 100%);
-    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
 
 .head {
-    margin: 30px 40px;
-    letter-spacing: 2px;
-    font-weight: 400;
+    letter-spacing: 4px;
+    margin: 20px 20px;
+    font-weight: 100;
+    font-size: 13px;
+    color: rgb(55, 55, 55);
 }
 
-.text-h2 {
-    font-size: 55px;
+.top {
     font-family: 'Fraunces', serif;
-    margin: 30px 40px;
+    font-size: 35px;
+    margin: 10px 20px;
+    color: rgb(0, 0, 0);
+    font-weight: bolder;
 }
 
 .text {
-    line-height: 35px;
-    letter-spacing: 2px;
-    margin: 30px 40px;
-    font-size: 15px;
+    line-height: 25px;
+    margin: 20px 20px;
+    font-size: 14px;
+    color: rgb(55, 55, 55);
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
-}
-
-.grid-flex {
-    display: flex;
 }
 
 .price {
-    font-size: 55px;
+    display: flex;
+    margin: 10px 20px;
+    gap: 0.7rem;
+}
+
+.price-h2 {
     font-family: 'Fraunces', serif;
-    margin-left: 40px;
+    font-size: 35px;
     color: hsl(158, 36%, 37%);
 }
 
-.dash {
+.dashed {
+    padding: 10px;
+    padding-top: 10px;
     text-decoration: line-through;
-    padding: 20px;
-    font-weight: 500;
+    font-weight: 400;
+    font-size: 13px;
+    color: rgb(55, 55, 55);
 }
 
 button {
-    width: 70%;
-    height: 60px;
-    background: hsl(158, 36%, 37%);
-    color: #fff;
-    border-radius: 10px;
-    margin: 30px 40px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    cursor: pointer;
-    transition: .5s;
+    width: 90%;
+    height: 50px;
+    margin: 10px 20px;
+    margin-bottom: 20px;
     border: none;
-}
-
-button i {
-    margin-right: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #ffffff;
+    font-weight: bolder;
+    background: hsl(158, 36%, 37%);
+    transition: .5s;
 }
 
 button:hover {
-    background: hsl(212, 21%, 14%);
+    background: hsl(158, 36%, 27%);
     transition: .5s;
+}
+
+h4 {
+    margin-top: 30px;
+    text-align: center;
+    /* text-decoration: underline; */
+    font-size: 20px;
+    cursor: pointer;
 }
 
 /* RESPONSIVE */
 
-@media screen and (max-width:700px) {
+@media screen and (min-width:600px) {
     .grid-container {
-        margin-top: 0px;
-        margin-left: auto;
-        margin-bottom: 0px;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .grid img {
         width: 100%;
         height: 100%;
-        border-top-left-radius: 0px;
-        border-bottom-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 10px;
+        border-top-left-radius: 10px;
+    }
+
+
+    .grid-two {
+        background: hsl(0, 0%, 100%);
+        border-bottom-right-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+
+    .top {
+        font-family: 'Fraunces', serif;
+        font-size: 35px;
+        margin: 10px 20px;
+        color: rgb(0, 0, 0);
+        font-weight: bolder;
+    }
+
+    body {
+        background: hsl(30, 38%, 92%);
+        padding: 60px 0;
+        margin: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    button {
+        width: 90%;
+        height: 50px;
+        margin: 10px 10px;
+        margin-bottom: 20px;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        color: #ffffff;
+        font-weight: bolder;
+        background: hsl(158, 36%, 37%);
+        transition: .5s;
     }
 }
